# memorization-LLM-prod

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: frankenstein.txt  frankenstein_short.txt  frankenstein_very_short.txt  q1.txt  q17.txt  q18.txt  q21.txt
scripts/: extract_query_txt.py  pdf_to_txt.py  preprocess_txt.py  run_long_form_metrics_examples.py
src/: auth.py  config.py  direct_extraction.py  extraction.py  llm_chat.py  long_form_metrics.py  metrics.py  permutator.py  prompt.py  utils.py
test/: test_all_model_chats.py  test_bon_extraction_query.py  test_bon_extraction_txt.py  test_direct_extraction_txt.py  test_extraction_query.py  test_long_form_metrics.py  test_maximum_tokens.py  test_permutator.py  test_phase1_metric.py
