[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "memorization"
version = "0.1.0"
description = "A project to study memorization in production LLMs"
readme = "README.md"
authors = [
    { name = "German" }
]
requires-python = ">=3.12"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
